# CA_EPREUVE_EAU

./: Cargo.toml  Readme.md
examples/: Chiffre_only.rs  Combinaison_de_3_chiffres.rs  Combinaisons_de_2_nombres.rs  Différence_minimum_absolue.rs  Entre_Min_et_Max.rs  Index_Wanted.rs  Majuscule.rs  Majuscule_sur_deux.rs  Par_ordre_ascii.rs  Parametres_a_l_envers.rs  Prochain_nombre_Premier.rs  String_dans_string.rs  Suite_de_Fibonacci.rs  Tri_par_sélection.rs  Tri_à_bulle.rs
